@@ -258,6 +258,7 @@ assign-ext-dyn:				ok
 assign-disk-from:			unconformable
 vsam-status:				ignore
 self-call-recursive:		skip
+non-unique-procedure-names:	ok
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		ACU
