@@ -255,6 +255,7 @@ assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
 vsam-status:				ok
 self-call-recursive:		skip
+non-unique-procedure-names:	warning # Needs to be checked
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		BS2000
