@@ -253,6 +253,7 @@ assign-ext-dyn:				unconformable
 assign-disk-from:			unconformable
 vsam-status:				unconformable
 self-call-recursive:			skip
+non-unique-procedure-names:		ok
 
 # use fixed word list, synonyms and exceptions specified there
 reserved-words:		GCOS
